    Mark as forwarded
  * d/p/tests-Use-tmp-file-to-dump-test-results.patch:
    Add patch from mutter's fork of cogl to write test logs to a temporary
    directory
  * d/p/tests-Show-the-actual-output-from-tests-if-VERBOSE-is-set.patch:
    Update to the version I sent upstream
  * d/tests/lib*-dev: Add superficial tests for the -dev packages

 -- Simon McVittie <smcv@debian.org>  Sun, 23 Feb 2020 14:25:10 +0000

cogl (1.22.4-3) unstable; urgency=medium

  * Team upload
  * d/p/Terminate-tests-with-SIGALRM-if-they-take-more-than-120-s.patch:
    Kill individual tests with SIGALRM if they take more than 120 seconds
    (arbitrary cutoff taken from the Meson build system in Mutter's fork
    of cogl). This avoids failing to build even though failures are ignored,
    and blocking a buildd for 150 minutes, if the test hangs.
    (Closes: #935592)
  * d/p/tests-Show-the-actual-output-from-tests-if-VERBOSE-is-set.patch:
    Show the output of each test. Writing it to a file is not much use
    on buildds, because the build directory is discarded after the build
    finishes anyway.
  * d/control.in: Add missing -dev dependency on libxrandr-dev
  * d/rules: Don't run xvfb-run under nocheck build option
  * d/p/test-premult-Don-t-free-texture-data-until-CoglBitmap-is-.patch:
    Fix a use-after-free in test code, which appears to fix one of the
    known test failures
  * d/p/Don-t-usually-run-tests-that-are-not-expected-to-succeed.patch:
    Don't run tests that are not expected to succeed, unless requested
    by setting $COGL_TEST_TRY_EVERYTHING
  * Canonicalize order of dependencies (wrap-and-sort -a)
  * Canonicalize order of installed file lists (wrap-and-sort -a)
  * Canonicalize Uploaders (wrap-and-sort -a)

 -- Simon McVittie <smcv@debian.org>  Sun, 25 Aug 2019 18:07:05 +0100

cogl (1.22.4-2) unstable; urgency=medium

  * Really include the symbol update...

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 14 Aug 2019 20:01:35 +0200
