@@ -1,3 +1,0 @@
-usr/include/cogl/cogl-path
-usr/lib/*/libcogl-path.so
-usr/lib/*/pkgconfig/cogl-path-*.pc
